# beacon-basecamp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODEX.md  README.md  flake.nix
docs/: retro-log.md
docs/plans/: beacon-implementation.md
modules/logos_beacon/: manifest.json  metadata.json
plugins/beacon_ui/: Main.qml  manifest.json  metadata.json
src/plugin/: BeaconPlugin.cpp  BeaconPlugin.h  plugin_metadata.json
tests/: logos_api_stub.cpp  test_beacon_plugin.cpp
